Minor z-index fix

--- a/Project MindMap/css/mindmap-preview.scss
+++ b/Project MindMap/css/mindmap-preview.scss
@@ -17,6 +17,7 @@ body {
 
   nav {
     position: fixed;
+    z-index: 9999;
     background-image: url('../img/bg.jpg');
     float: left;
     width: 100px;
